fixed overflow components

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -4,13 +4,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        height: 95vh;
+        min-height: 95vh;
         margin: 0;
         padding: 0;
         display: flex;
         align-items: center;
         justify-content: space-around;
         gap: 20px;
+        position: relative;
 }
 
 .SignUpRight {
@@ -18,6 +19,8 @@
     height: 550px;
     border-radius: 20px;
     font-size: 20px;
+    overflow: hidden;
+    position: relative;
 }
 
 .SignUpRight > h2 {
