--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -13,7 +13,6 @@
   align-items: center;
 }
 
-
 .fa-brands.fa-whatsapp {
   color: white;
   font-size: 25px;
@@ -144,7 +143,7 @@
 }
 
 .Close {
-  display: none
+  display: none;
 }
 
 .WelcomeMsg {
@@ -164,8 +163,7 @@
   height: 30px;
 }
 
-
-@media (max-width: 1300px) {
+@media (max-width: 1400px) {
   .NavContainer .links {
     display: none;
   }
@@ -176,5 +174,16 @@
 
   .DropDownMenu {
     display: block;
+  }
+}
+
+
+@media (max-width: 750px) {
+  .LogoAndName {
+    display: none;
+  }
+
+  .CartButton {
+    padding: 20px;
   }
 }
