--- a/frontend/src/components/ReviewPage/ReviewPage.css
+++ b/frontend/src/components/ReviewPage/ReviewPage.css
@@ -1,87 +1,96 @@
 .AllReviewsContainer {
-    background:
-    linear-gradient(to bottom, rgba(106, 104, 104, 0.6), rgba(194, 165, 165, 0.6)),
-    url('https://images.unsplash.com/photo-1585909695284-32d2985ac9c0?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    background-color: black;
-    gap: 50px;
-    height: 100vh;
-    display: flex;
+  background: linear-gradient(
+      to bottom,
+      rgba(106, 104, 104, 0.6),
+      rgba(194, 165, 165, 0.6)
+    ),
+    url("https://images.unsplash.com/photo-1585909695284-32d2985ac9c0?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  align-items: center;
+  background-color: black;
+  gap: 50px;
+  height: 100vh;
+  display: flex;
+  min-height: 100vh;
+  padding: 20px;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .LeftReview {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
 }
 
 .LeftReview > h2 {
-    font-size: 45px;
+  font-size: 45px;
 }
 
 .LeftReview > p {
-    font-size: 20px;
+  font-size: 20px;
 }
 
-
 .RightReview {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 50%;
 }
 
 .EachReview {
-    border: 3px solid black;
-    padding: 20px;
-    margin-bottom: 10px;
-    border-radius: 15px;
-    width: 500px;
-    height: 170px;
-    background-color: grey
+  border: 3px solid black;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  width: 500px;
+  height: 170px;
+  background-color: grey;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .EachReview > div > p {
-    color: black;
+  color: black;
 }
 
 .StarAndDatee {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .ReviewAndUserr {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .SDB {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .Rvbuttons {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .Rvbuttons > button {
-    width: 80px;
-    background-color: black;
-    color: white;
-    cursor: pointer;
-    border-radius: 25px;
-    font-weight: bold;
-    height: 25px;
+  width: 80px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  border-radius: 25px;
+  font-weight: bold;
+  height: 25px;
 }
